--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,29 +1,29 @@
 <!-- Default form register -->
-<form class="text-center border border-light p-5" (ngSubmit)="onFormSubmit()">
+<form class="text-center border border-light p-5" [formGroup]="registrationForm" (ngSubmit)="onFormSubmit()">
 
     <p class="h4 mb-4">Sign up</p>
 
     <div class="form-row mb-4">
         <div class="col">
             <!-- First name -->
-            <input type="text" name="firstName" [(ngModel)]="model.firstName" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name" required>
+            <input type="text" name="firstName" formControlName="firstName" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name" required>
         </div>
         <div class="col">
             <!-- Last name -->
-            <input type="text" name="lastName" [(ngModel)]="model.lastName" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name" required>
+            <input type="text" name="lastName" formControlName="lastName" id="defaultRegisterFormLastName" class="form-control" placeholder="Last name" required>
         </div>
     </div>
 
     <!-- E-mail -->
-    <input type="email" name="email" [(ngModel)]="model.email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail" required>
+    <input type="email" name="email" formControlName="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail" required>
 
     <!-- Password -->
-    <input type="password" name="password" [(ngModel)]="model.password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
+    <input type="password" name="password" formControlName="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
     <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
         At least 8 characters and 1 digit
     </small>
 
-    <button type="submit" [disabled]="formSubmitted" mdbBtn color="info" block="true" class="my-4">Sign in</button>
+    <button type="submit" [disabled]="!registrationForm.valid || formSubmitted" mdbBtn color="info" block="true" class="my-4">Register</button>
 
     <!--<hr>-->
 
