--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,7 @@
                         <div class="divider dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Settings</a>
                         <div class="divider dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Logout</a>
+                        <a class="dropdown-item" (click)="logout()">Logout</a>
                     </div>
                     Username
                 </a>
