Subscribe to Token object instead of bool

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,7 +30,7 @@
                         <div class="divider dropdown-divider"></div>
                         <a class="dropdown-item" (click)="logout()">Logout</a>
                     </div>
-                    Username
+                    {{username}}
                 </a>
             </li>
         </ul>
