--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
         <!--Links right-->
         <ul class="navbar-nav ml-auto nav-flex-icons" *ngIf="isLoggedIn; else notLoggedIn">
             <li class="nav-item">
-                <a class="nav-link waves-light" mdbWavesEffect>Create poll</a>
+                <a class="nav-link waves-light" routerLink="polls/new" routerLinkActive="active" mdbWavesEffect>Create poll</a>
             </li>
             <li class="nav-item">
                 <a mdbDropdown dropdownToggle type="button" class="nav-link dropdown-toggle">
@@ -24,7 +24,6 @@
                     <div class="dropdown-menu dropdown-menu-right dropdown-primary">
                         <a class="dropdown-item" href="#">Profile</a>
                         <a class="dropdown-item" href="#">My Friends</a>
-                        <a class="dropdown-item" href="#">Create poll</a>
                         <div class="divider dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Settings</a>
                         <div class="divider dropdown-divider"></div>
