--- a/src/app/components/poll.form/poll.form.component.html
+++ b/src/app/components/poll.form/poll.form.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="bottom">
-            <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">Create</button>
+            <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">{{isEdit ? 'Save changes' : 'Create'}}</button>
         </div>
     </form>
 </div>
