--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,33 +1,34 @@
-<form class="text-center border border-light p-5" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+<div class="container">
+    <form class="text-center border border-light p-5 mt-3" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
 
-    <p class="h4 mb-4">Sign in</p>
+        <p class="h4 mb-4">Sign in</p>
 
-    <!-- Email -->
-    <input type="email" formControlName="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
+        <!-- Email -->
+        <input type="email" formControlName="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
 
-    <!-- Password -->
-    <input type="password" formControlName="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
+        <!-- Password -->
+        <input type="password" formControlName="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
 
-    <div class="d-flex justify-content-around">
-        <div>
-            <!-- Remember me -->
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" formControlName="rememberMe" class="custom-control-input" id="defaultLoginFormRemember">
-                <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+        <div class="d-flex justify-content-around">
+            <div>
+                <!-- Remember me -->
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" formControlName="rememberMe" class="custom-control-input" id="defaultLoginFormRemember">
+                    <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
+                </div>
+            </div>
+            <div>
+                <!-- Forgot password -->
+                <a href="">Forgot password?</a>
             </div>
         </div>
-        <div>
-            <!-- Forgot password -->
-            <a href="">Forgot password?</a>
-        </div>
-    </div>
 
-    <!-- Sign in button -->
-    <button class="btn btn-info btn-block my-4" type="submit" [disabled]="formSubmitted">Sign in</button>
+        <!-- Sign in button -->
+        <button class="btn btn-info btn-block my-4" type="submit" [disabled]="formSubmitted">Sign in</button>
 
-    <!-- Register -->
-    <p>Not a member?
-        <a routerLink="/register">Register</a>
-    </p>
-
-</form>
+        <!-- Register -->
+        <p>Not a member?
+            <a routerLink="/register">Register</a>
+        </p>
+    </form>
+</div>
