Add friends component, route and module

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
                     <mdb-icon fas icon="user"></mdb-icon>
                     <div class="dropdown-menu dropdown-menu-right dropdown-primary">
                         <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">My Friends</a>
+                        <a class="dropdown-item" routerLink="friends">My Friends</a>
                         <div class="divider dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Settings</a>
                         <div class="divider dropdown-divider"></div>
