Refactor code, add 'removed' button layout, resend friend request action

--- a/src/app/components/friends/action-button/friends-action-button.component.html
+++ b/src/app/components/friends/action-button/friends-action-button.component.html
@@ -1,5 +1,5 @@
 <div class="btn-group" mdbDropdown>
-    <button mdbDropdownToggle type="button" mdbBtn class="dropdown-toggle waves-light" [ngClass]="'btn-' + color" mdbWavesEffect>
+    <button mdbDropdownToggle type="button" mdbBtn class="dropdown-toggle waves-light" [ngClass]="'btn-' + color" mdbWavesEffect [disabled]="this.isDisabled">
         {{text}}
     </button>
 
