Move to subdirectory

--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -13,6 +13,7 @@
         </div>
 
         <div class="bottom">
+            <poll-invite-menu></poll-invite-menu>
             <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">{{isEdit ? 'Save changes' : 'Create'}}</button>
         </div>
     </form>
