--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -13,7 +13,17 @@
         </div>
 
         <div class="bottom">
-            <poll-invite-menu></poll-invite-menu>
+            <ng-select
+                    formControlName="invitedFriends"
+                    [multiple]="true"
+                    [items]="friends"
+                    bindLabel="friend.fullName"
+                    bindValue="friend.memberID"
+                    notFoundText="Not found"
+                    placeholder="Invite friends"
+                    clearAllText="Clear"
+                    class="mt-3">
+            </ng-select>
             <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">{{isEdit ? 'Save changes' : 'Create'}}</button>
         </div>
     </form>
