--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-3">
-    <h2 class="text-center">My polls</h2>
-    <div class="row">
+    <div class="text-center">
+        <h2>My polls</h2>
+        <p *ngIf="polls?.length == 0">Looks like haven't made any polls yet...</p>
+    </div>
+    <div class="row" *ngIf="polls?.length > 0">
         <div class="col" *ngFor="let poll of polls">
             <mdb-card>
                 <mdb-card-body>
