Update invited friends

--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -1,14 +1,14 @@
 <div class="container mt-3">
-    <h2 class="text-center">Create a new poll</h2>
+    <h2 class="text-center">Create a new pollId</h2>
 
     <form class="poll-form" [formGroup]="pollForm" (ngSubmit)="onFormSubmit()">
         <div class="field-wrapper">
             <input type="text" class="field title" formControlName="title" placeholder="Enter title or question">
         </div>
 
-        <div formArrayName="fields">
-            <div class="field-wrapper" *ngFor="let field of fields.controls; let i=index;">
-                 <input type="text" class="field" value="{{field.value}}" formControlName="{{i}}" placeholder="Option #{{i+1}}" (focus)="onFieldFocused(i)">
+        <div formArrayName="optionFields">
+            <div class="field-wrapper" *ngFor="let field of optionFields.controls; let i=index;">
+                 <input type="text" class="field" value="{{field.value}}" formControlName="{{i}}" placeholder="Option #{{i+1}}" (focus)="onOptionFieldFocused(i)">
             </div>
         </div>
 
@@ -24,7 +24,7 @@
                     clearAllText="Clear"
                     class="mt-3">
             </ng-select>
-            <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">{{isEdit ? 'Save changes' : 'Create'}}</button>
+            <button class="btn btn-info my-4" type="submit" [disabled]="formSubmitted">Save changes</button>
         </div>
     </form>
 </div>
