--- a/src/app/components/polls/poll-form/poll-form.component.html
+++ b/src/app/components/polls/poll-form/poll-form.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-    <h2 class="text-center">Create a new pollId</h2>
+    <h2 class="text-center">Create a new poll</h2>
 
     <form class="poll-form" [formGroup]="pollForm" (ngSubmit)="onFormSubmit()">
         <div class="field-wrapper">
