--- a/src/app/components/polls/poll-vote-form/poll-vote-form.component.html
+++ b/src/app/components/polls/poll-vote-form/poll-vote-form.component.html
@@ -3,8 +3,8 @@
         <h2 class="text-center">{{poll.name}}</h2>
         <div *ngFor="let answer of poll.answers; let i = index">
             <div class="custom-control custom-radio">
-                <input type="radio" class="custom-control-input" id="{{i}}" value="{{answer}}" formControlName="option">
-                <label class="custom-control-label" for="{{i}}">{{answer}}</label>
+                <input type="radio" class="custom-control-input" id="{{i}}" value="{{answer.answerID}}" formControlName="option">
+                <label class="custom-control-label" for="{{i}}">{{answer.answer}}</label>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Vote</button>
