--- a/src/app/components/polls/poll-vote-form/poll-vote-form.component.html
+++ b/src/app/components/polls/poll-vote-form/poll-vote-form.component.html
@@ -3,10 +3,10 @@
         <h2 class="text-center">{{poll.name}}</h2>
         <div *ngFor="let answer of poll.answers; let i = index">
             <div class="custom-control custom-radio">
-                <input type="radio" class="custom-control-input" id="{{i}}" value="{{answer.answerID}}" formControlName="option">
+                <input type="radio" class="custom-control-input" id="{{i}}" value="{{answer.answerID}}" [checked]="answer.answerID == poll.vote.answerID" formControlName="option">
                 <label class="custom-control-label" for="{{i}}">{{answer.answer}}</label>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Vote</button>
+        <button type="submit" class="btn btn-primary mt-3">{{isUpdate ? 'Update vote' : 'Vote'}}</button>
     </form>
 </div>
