--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                         </ul>
                     </mdb-card-text>
                     <div class="flex-row">
-                        <a class="card-link">View</a>
+                        <a class="card-link" [routerLink]="['polls/results/', poll.pollID]">View</a>
                         <a class="card-link" [routerLink]="['polls/edit', poll.pollID]">Edit</a>
                         <a class="card-link" (click)="deletePoll(poll.pollID)">Delete</a>
                     </div>
