--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,34 @@
-<p>This is the homepage. Members: {{memeberCount}}</p>
+<div class="container">
+    <h2 class="text-center">Welcome to the most boring homepage in the world!</h2>
+
+    <div class="row">
+        <div class="col">
+            <div class="card blue lighten-4">
+                <div class="card-body">
+                    <h5 class="card-title text-center">{{stats.memberCount}} members registered</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card blue lighten-4">
+                <div class="card-body">
+                    <h5 class="card-title text-center">{{stats.pollCount}} polls created</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5 mb-3">
+        <div class="col text-center">
+            <h3>Here's a random cat fact:</h3>
+            <blockquote class="blockquote">
+                <p>{{catFact | async}}</p>
+                <footer class="blockquote-footer">
+                    <cite title="Source Title">
+                        <a href="https://catfact.ninja/" target="_blank">https://catfact.ninja/</a>
+                    </cite>
+                </footer>
+            </blockquote>
+        </div>
+
+    </div>
+</div>
