Add form validation to register

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <form class="text-center border border-light p-5 mt-3" [formGroup]="registrationForm" (ngSubmit)="onFormSubmit()">
+    <form class="text-center border border-light p-5 mt-3 md-form" [formGroup]="registrationForm" (ngSubmit)="onFormSubmit()">
 
         <p class="h4 mb-4">Sign up</p>
 
-        <div class="form-row mb-4">
+        <div class="form-row mb-4 md-form">
             <div class="col">
                 <!-- First name -->
                 <input type="text" name="firstName" formControlName="firstName" id="defaultRegisterFormFirstName" class="form-control" placeholder="First name" required>
@@ -15,13 +15,21 @@
         </div>
 
         <!-- E-mail -->
-        <input type="email" name="email" formControlName="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail" required>
+        <div class="md-form">
+            <input mdbInput mdbValidate type="email" name="email" formControlName="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail" required>
+            <mdb-error *ngIf="formSubmitted && form.email.errors">Invalid email</mdb-error>
+        </div>
 
         <!-- Password -->
-        <input type="password" name="password" formControlName="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
-        <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-            At least 8 characters and 1 digit
+        <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-1">
+            Password must be at least 8 characters long
         </small>
+        <input type="password" name="password" formControlName="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock" required>
+        <div class="md-form">
+            <input mdbInput mdbValidate type="password" name="repeatPassword" formControlName="repeatPassword" class="form-control mt-3" placeholder="Repeat password" required>
+            <mdb-success *ngIf="!form.repeatPassword.errors">Passwords match</mdb-success>
+            <mdb-error *ngIf="formSubmitted && form.repeatPassword.errors">Passwords dont match!</mdb-error>
+        </div>
 
         <button type="submit" [disabled]="!registrationForm.valid || formSubmitted" mdbBtn color="info" block="true" class="my-4">Register</button>
 
