--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="text-center border border-light p-5 mt-3" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+    <form class="text-center border border-light p-5 mt-3 md-form" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
 
         <p class="h4 mb-4">Sign in</p>
 
@@ -9,19 +9,19 @@
         <!-- Password -->
         <input type="password" formControlName="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
 
-        <div class="d-flex justify-content-around">
+       <!-- <div class="d-flex justify-content-around">
             <div>
-                <!-- Remember me -->
+             &lt;!&ndash;   &lt;!&ndash; Remember me &ndash;&gt;
                 <div class="custom-control custom-checkbox">
                     <input type="checkbox" formControlName="rememberMe" class="custom-control-input" id="defaultLoginFormRemember">
                     <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                </div>
+                </div>&ndash;&gt;
             </div>
             <div>
-                <!-- Forgot password -->
+                &lt;!&ndash; Forgot password &ndash;&gt;
                 <a href="">Forgot password?</a>
             </div>
-        </div>
+        </div>-->
 
         <!-- Sign in button -->
         <button class="btn btn-info btn-block my-4" type="submit" [disabled]="formSubmitted">Sign in</button>
