Fix routes to and from /dashboard

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
                 <a class="nav-link waves-light" routerLink="dashboard" routerLinkActive="active" mdbWavesEffect>Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" routerLink="polls/new" routerLinkActive="active" mdbWavesEffect>Create poll</a>
+                <a class="nav-link waves-light" routerLink="/polls/new" routerLinkActive="active" mdbWavesEffect>Create poll</a>
             </li>
             <li class="nav-item">
                 <a mdbDropdown dropdownToggle type="button" class="nav-link dropdown-toggle">
