--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -18,8 +18,8 @@
                         </ul>
                     </mdb-card-text>
                     <div class="flex-row">
-                        <a class="card-link" [routerLink]="['polls/results/', poll.pollID]">View</a>
-                        <a class="card-link" [routerLink]="['polls/edit', poll.pollID]">Edit</a>
+                        <a class="card-link" [routerLink]="['/polls/results/', poll.pollID]">View</a>
+                        <a class="card-link" [routerLink]="['/polls/edit', poll.pollID]">Edit</a>
                         <a class="card-link" (click)="deletePoll(poll.pollID)">Delete</a>
                     </div>
                 </mdb-card-body>
@@ -40,13 +40,13 @@
                         <h4>{{poll.name}}</h4>
                     </mdb-card-title>
                     <div class="flex-row" *ngIf="hasAnswered(poll); else notAnswered">
-                        <a class="card-link" [routerLink]="['polls/vote', poll.pollID]">Change answer</a>
+                        <a class="card-link" [routerLink]="['/polls/vote', poll.pollID]">Change answer</a>
                         <!--<a class="card-link" (click)="removeParticipant(poll.pollID)">Remove</a>-->
-                        <a class="card-link" [routerLink]="['polls/results', poll.pollID]">View results</a>
+                        <a class="card-link" [routerLink]="['/polls/results', poll.pollID]">View results</a>
                         <span class="float-right text-success">Answered</span>
                     </div>
                     <ng-template #notAnswered>
-                        <a class="card-link" [routerLink]="['polls/vote', poll.pollID]">Participate</a>
+                        <a class="card-link" [routerLink]="['/polls/vote', poll.pollID]">Participate</a>
                            <!-- <a class="card-link" (click)="removeParticipant(poll.pollID)">Remove</a>-->
                     </ng-template>
                 </mdb-card-body>
