Implement alert service

--- a/src/app/components/polls/poll-result/poll-result.component.html
+++ b/src/app/components/polls/poll-result/poll-result.component.html
@@ -18,5 +18,5 @@
         <li>{{answer.answer}} ({{answer.votes}} votes)</li>
     </ul>
 
-    <button type="button" class="btn btn-primary" routerLink="/">Back</button>
+    <button type="button" class="btn btn-primary" routerLink="/dashboard">Back</button>
 </div>
