--- a/src/app/components/friends/friends.component.html
+++ b/src/app/components/friends/friends.component.html
@@ -1,20 +1,23 @@
 <div class="container">
     <h2>Friends</h2>
 
+    <friend-request-field title="Add friends" subtitle="Emails are separated by a semicolon (;)" separator=";"></friend-request-field>
+
+    <h3>Requests</h3>
+    <app-spinner [show]="!friendRequests"></app-spinner>
     <div *ngIf="friendRequests?.length > 0">
-        <h3>Friend requests</h3>
         <friend-list [friends]="friendRequests" [isIncoming]="true"></friend-list>
     </div>
+    <p *ngIf="friendRequests?.length == 0">No friend requests received yet</p>
 
-    <friend-request-field title="Add friends" subtitle="Emails are separated by a semicolon (;)" separator=";"></friend-request-field>
     <div class="mt-3">
         <h3>List</h3>
         <div *ngIf="friends && friends.length > 0; else noFriends">
             <friend-list [friends]="friends" [isIncoming]="false"></friend-list>
         </div>
         <ng-template #noFriends>
-            <app-spinner ></app-spinner>
-            <span *ngIf="friends && friends.length == 0">You don't have any friends yet :(</span>
+            <app-spinner [show]="!friends"></app-spinner>
+            <span *ngIf="friends?.length == 0">You don't have any friends yet :(</span>
         </ng-template>
     </div>
 
